--- a/mern-auth/package.json
+++ b/mern-auth/package.json
@@ -1,6 +1,7 @@
 {
   "name": "auth",
   "version": "1.0.0",
+  "homepage": "https://riasatmahmood.github.io/portal2.0",
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -8,7 +9,9 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +20,7 @@
     "body-parser": "^1.20.0",
     "concurrently": "^7.3.0",
     "express": "^4.18.1",
+    "gh-pages": "^5.0.0",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.3",
